# chatlocalgui

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: build.py  main.py
frontend/: Dockerfile  go.mod  go.sum
frontend/diagram/: diag.tex
frontend/server/: db_helpers.go  main.go
frontend/static/: index.html  styles.css
frontend/static/js/: api.js  main.js  utils.js
