[tool.poetry]
name = "backend"
version = "0.1.0"
description = "serving a python backend for chatlocal"
authors = ["R.Grouls <Raoul.Grouls@han.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
chatlocal = "^0.1.2"
click = "^8.1.3"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.2"
pep8-naming = "^0.13.3"
flake8-annotations = "^3.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
