[project]
authors = [
  {email = "Raoul.Grouls@han.nl", name = "Raoul Grouls"},
]

name = "backend"
version = "0.2.0"
description = "serving a python backend for chatlocal"
requires-python = ">=3.9, <3.11"

dependencies = [
    "chatlocal>=0.1.3",
    "click>=8.1.7",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "loguru>=0.7.2",
]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]